# SparseHungarian

./: CMakeLists.txt
SparseHungarian/: Defs.h  HungarianSolver.h  Matching.h  SparseGroup.h
include/SparseHungarian/: SparseGroup.h
src/: HungarianSolver.cxx  Matching.cxx  SparseGroup.cxx
util/: MatchTestPoints.cxx  test.cxx
